--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
+    <title>Page Title</title>
 </head>
 <body>
 
-<h1>Template</h1>
-
-<p>This is a blank template for a web page.</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
